<resources>
    <string name="app_name">mvvm_sample</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allow">ALLOW</string>
    <string name="skip">SKIP</string>
    <string name="cardview_image">cardview_image</string>
    <string name="enable_push_notifications">Enable Push Notifications</string>
    <string name="enable_location_services">Enable Location Services</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="bottom_menu_map">Map</string>
    <string name="bottom_menu_schedule">Schedule</string>
    <string name="bottom_menu_dashboard">Dashboard</string>
    <string name="bottom_menu_customers">Customers</string>
    <string name="drawer_menu_user_profile">User Profile</string>
    <string name="drawer_menu_business_settings">Business Settings</string>
    <string name="drawer_menu_help_center">Help Center</string>
    <string name="drawer_menu_privacy_policy">Privacy Policy</string>
    <string name="drawer_menu_terms_of_service">Terms of Service</string>
    <string name="drawer_menu_switch_account">Switch Account</string>
    <string name="drawer_menu_sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="push_notification_permission">Notification Permission</string>
    <string name="location_permission">Location Permission</string>
    <string name="progress">Progress</string>


    <string name="status">Status</string>
    <string name="clock_in">Clock In</string>
    <string name="out">Out</string>
    <string name="in">In</string>
    <string name="on_break">On break</string>
    <string name="current_shift">Current Shift</string>
    <string name="paused">Paused</string>
    <string name="timer">00:00:00</string>
    <string name="start">Start</string>
    <string name="is_break">Break</string>
    <string name="clock_out">Clock Out</string>
    <string name="stop">Stop</string>
    <string name="job_details">Job Details</string>
    <string name="location_dialog_title">Share your location in Settings</string>
    <string name="location_dialog_detail">It seems you haven\'t shared your location or disabled location. Share your location in Settings to see details like distance, navigation and more.</string>
    <string name="settings">Settings</string>
    <string name="no_thanks">No Thanks</string>
    <string name="view_job">View Job</string>
    <string name="attachment_type">ATTACHMENT TYPE</string>
    <string name="public_text">Public</string>
    <string name="private_text">Private</string>
    <string name="save">Save</string>
    <string name="add_note">Add Note</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="mark_complete">Mark complete</string>
    <string name="description">Description</string>
    <string name="note">NOTE</string>
    <string name="note_type">NOTE TYPE</string>
    <string name="sample_file_pdf">Sample_file.pdf</string>
    <string name="uploading_text">Uploading...</string>
    <string name="please_enter_your_credentials_to_proceed">Please enter your credentials to proceed</string>
    <string name="email">EMAIL</string>
    <string name="email_hint">Email</string>
    <string name="password">PASSWORD</string>
    <string name="password_hint">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="negligible">0</string>
    <string name="day">Mon</string>
    <string name="num">54*</string>
    <string name="num2">34*</string>
    <string name="Info">Info</string>
    <string name="num_five">5</string>
    <string name="date">August 2020</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="job_number">Job Number #</string>
    <string name="enroute">Enroute</string>
    <string name="customer">CUSTOMER</string>
    <string name="customer_name">Customer Name</string>
    <string name="time">Mon, 12 May</string>
    <string name="time_2">12:00 AM</string>
    <string name="check_in">Check in</string>
    <string name="onhold">Onhold</string>
    <string name="done">Done</string>
    <string name="actions">ACTIONS</string>
    <string name="today_s_jobs">Today\'s Jobs</string>
    <string name="div">0/0</string>
    <string name="complete">Complete</string>
    <string name="percent">0%</string>
    <string name="sunny">Sunny</string>
    <string name="home">Home</string>
    <string name="temp">47*F</string>
    <string name="temp_medium">54*F / 35*F</string>
    <string name="afternoon">Afternoon</string>
</resources>